# cavity-QED-model

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
docs/: BUILD-PLAN.md  DEEP-CONCEPTS.md  FIX-CATEGORIES.md  GROUNDING-RESEARCH.md  HISTORY-TREE.md  MASTER-BUILD-PLAN.md  OPEN-QUANTUM-SPEC.md  PHYSICS-SPEC.md  PRODUCT-PLAN.md  PRODUCT-SPEC.md  REFERENCES.md  RESEARCH-EVIDENCE.json  SIMULATION-PLAN.md  SOLVER-PLAN.md  SPEC-UPDATES.md  VALIDATION.md  VERIFICATION-REPORT.md  VISUAL-SPEC.md  WIGNER-VIZ-SPEC.md  _compact-evidence.json
engine/: collective.ts  constants.ts  htc.ts  index.ts  marcus.ts  microcavity.ts
engine/__tests__/: engine.test.ts
golden/: gen_golden.py  gen_spectrum_golden.py
scripts/: screenshot-and-report.ts
src/: App.tsx  PolaritonFormation.tsx  SceneBoundary.tsx  styles.css
src/cavity/: CavityScene.tsx  LiveCavityScene.tsx  cavityKit.tsx  ensemble.ts
src/quantum/: engine.ts
wasm/: Cargo.toml  validate_wasm.cjs
wasm/golden/: golden.json  spectrum_golden.json
wasm/pkg-web/: cqed_core.d.ts  cqed_core.js  cqed_core_bg.wasm  cqed_core_bg.wasm.d.ts  package.json
wasm/src/: entropy.rs  fft.rs  htc.rs  lib.rs  operators.rs  optics.rs  solver.rs  spectrum.rs  wasm_api.rs  wigner.rs
wasm/tests/: fft_spectrum.rs  htc.rs  husimi_entropy.rs  operator_lock.rs  optics.rs  solver_golden.rs  spectrum_golden.rs  wigner_golden.rs
wasm/tests/common/: mod.rs
