[package]
name = "cqed_core"
version = "0.1.0"
edition = "2021"
description = "Open-quantum cavity-QED compute core (Lindblad + Wigner), validated bit-for-bit against QuTiP"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nalgebra = "0.33"
num-complex = "0.4"
wasm-bindgen = "0.2"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
